--- a/las/CMakeLists.txt
+++ b/las/CMakeLists.txt
@@ -43,7 +43,14 @@ install(TARGETS las
 
 if (LAS_UNIT_TEST)
 
-    find_package (Catch2 CONFIG REQUIRED)
+    include(FetchContent)
+
+    FetchContent_Declare(
+      Catch2
+      GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+      GIT_TAG        v3.3.2)
+    
+    FetchContent_MakeAvailable(Catch2)
 
     add_executable (las-unit
             test/byte_swap.cpp
