las - Fix missing run keyword on c-cpp.yml

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,6 +23,7 @@ jobs:
         cd build
         cmake --build . --target=all
     - name: test
+      run: |
         cd build
         ./las/las-unit
         
