add cmake package creation code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required(VERSION 3.24)
 
-option (BUILD_TESTS "Build tests" OFF)
+include(cmake/tools.cmake)
+include(CMakePackageConfigHelpers)
+
+option(BUILD_TESTS "Build tests" OFF)
 
 if (BUILD_TESTS)
-    list (APPEND VCPKG_MANIFEST_FEATURES "test")
-endif()
+    list(APPEND VCPKG_MANIFEST_FEATURES "test")
+endif ()
 
-project (las CXX)
+project(las CXX)
 
 add_subdirectory(las)
 add_subdirectory(las-test)
