--- a/las-test/CMakeLists.txt
+++ b/las-test/CMakeLists.txt
@@ -1,3 +1,5 @@
+
+# project source files
 set (las_test_include_files
         include/las/test/las-test.h
         include/las/test/mock.h
@@ -6,6 +8,7 @@ set (las_test_include_files
 set (las_test_source_files
         src/mock.cpp)
 
+# project build description
 add_library (las-test
         ${las_test_include_files}
         ${las_test_source_files})
@@ -16,16 +19,35 @@ target_link_libraries(
 
 target_include_directories(
         las-test PUBLIC
-        include/)
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include/>)
 
 target_compile_features (
         las-test PUBLIC cxx_std_17)
 
+# project export
+vcpkg_manifest_version(las_version)
+
 set_target_properties(las-test PROPERTIES
+        VERSION ${las_version}
         PUBLIC_HEADER "${las_test_include_files}")
 
-install(TARGETS las-test
-        PUBLIC_HEADER DESTINATION include/las/test)
+target_include_directories(
+        las-test PUBLIC
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+
+write_basic_package_version_file(
+        lasTestConfigVersion.cmake
+        VERSION ${las_version}
+        COMPATIBILITY ExactVersion)
+
+install(TARGETS las-test EXPORT las
+        COMPONENT test)
+
+install(EXPORT las
+        NAMESPACE las::
+        DESTINATION lib/cmake/las
+        FILE lasConfig.cmake
+        COMPONENT test)
 
 if (BUILD_TESTS)
     find_package  (Catch2 CONFIG REQUIRED)
