add barrier, concurrent stress tester and operating system futex abstraction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.24)
+cmake_policy(SET CMP0054 NEW)
 
 include(cmake/tools.cmake)
 include(CMakePackageConfigHelpers)
@@ -13,3 +14,8 @@ project(las CXX)
 
 add_subdirectory(las)
 add_subdirectory(las-test)
+
+install(EXPORT LAS_INSTALL_TARGETS
+        NAMESPACE las::
+        DESTINATION share/las
+        FILE lasConfig.cmake)
