--- a/las-test/CMakeLists.txt
+++ b/las-test/CMakeLists.txt
@@ -1,58 +1,56 @@
 
-# project source files
-set (las_test_include_files
+#region project source files
+set(las_test_include_files
         include/las/test/test.h
         include/las/test/concurrent_stress_tester.hpp
         include/las/test/mock.hpp
         include/las/test/random.hpp
         include/las/test/token.hpp)
 
-set (las_test_source_files
+set(las_test_source_files
         src/concurrent_stress_tester.cpp
         src/mock.cpp
         src/random.cpp)
+#endregion
 
-# project build description
-add_library (las-test
+#region project build description
+add_library(las-test
         ${las_test_include_files}
         ${las_test_source_files})
 
 target_link_libraries(
         las-test PUBLIC
-        las)
+        las
+        $<$<PLATFORM_ID:Windows>:Synchronization>)
 
 target_include_directories(
         las-test PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include/>)
 
-target_compile_features (
+target_compile_features(
         las-test PUBLIC cxx_std_17)
 
 add_library(las::test ALIAS las-test)
+#endregion
 
-# project export
-vcpkg_manifest_version(las_version)
-
+#region project export
 set_target_properties(las-test PROPERTIES
-        VERSION ${las_version}
-        PUBLIC_HEADER "${las_test_include_files}"
+        VERSION ${LAS_VERSION}
         EXPORT_NAME test)
 
 target_include_directories(
         las-test PUBLIC
-        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+        $<INSTALL_INTERFACE:include/>)
 
-write_basic_package_version_file(
-        lasTestConfigVersion.cmake
-        VERSION ${las_version}
-        COMPATIBILITY ExactVersion)
+install(TARGETS las-test EXPORT LAS_INSTALL_TARGETS)
+install(DIRECTORY include/ DESTINATION include/)
+#endregion
 
-install (TARGETS las-test EXPORT LAS_INSTALL_TARGETS)
-
+#region project tests
 if (BUILD_TESTS)
-    find_package  (Catch2 CONFIG REQUIRED)
+    find_package(Catch2 CONFIG REQUIRED)
 
-    add_executable (las-test-unit
+    add_executable(las-test-unit
             test/token.cpp)
 
     target_link_libraries(
@@ -60,4 +58,5 @@ if (BUILD_TESTS)
             las-test
             Catch2::Catch2
             Catch2::Catch2WithMain)
-endif()
+endif ()
+#endregion
