--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4.1.2
     - name: configure
       run: |
         mkdir -p ./build
         cd build
-        cmake .. -DCMAKE_BUILD_TYPE=Release
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=ON
     - name: make
       run: |
         cd build
@@ -26,4 +26,5 @@ jobs:
       run: |
         cd build
         ./las/las-unit
+        ./las/las-test-unit
         
